--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     background-color:deeppink;
 }
 p{
-    color: goldenrod;
+    color: rgb(255, 191, 30);
     font-size: 40px;
     text-align : justify;
 }
